去掉了匹配insert的方法，加多了输出myBatis格式的方法